# c_project_template

./: CMakeLists.txt  README.md
include/: util.h
src/: main.c  util.c
